# onto-agent

./: .gitignore
onto-agent-server/: TEST_PLAN.md  TEST_REPORT_20260410.md  init_fuseki.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json
onto-agent-server/data/: ontoagent.db
onto-agent-server/migrations/versions/: 002_update_ontology_named_graphs.py
onto-agent-server/scripts/srm_data/: schema.sql  seed.py
onto-agent-server/src/: config.py  constants.py  database.py  exceptions.py  index.ts  logging_config.py  main.py
onto-agent-server/src/controllers/: datasourceController.ts
onto-agent-server/src/core/: naming.py
onto-agent-server/src/entities/: Datasource.ts
onto-agent-server/src/models/: datasource.py  ontology.py  query_models.py  sync_models.py
onto-agent-server/src/repositories/: __init__.py  entity_index.py  ontology.py
onto-agent-server/src/routers/: admin.py  datasource.py  debug.py  individuals.py  mappings.py  ontologies.py  ontology.py  properties.py  query.py  sync.py
onto-agent-server/src/routes/: datasource.ts
onto-agent-server/src/schemas/: datasource.py  ontology.py
onto-agent-server/src/services/: datasource.py  datasourceService.ts  etl_engine.py  jena_client.py  jena_named_graph.py  mapping_service.py  ontology.py  ontology_metadata.py  query_service.py  saga_manager.py  sync_service.py
onto-agent-server/src/services/jena/: __init__.py  jena_abox.py  jena_base.py  jena_tbox.py  (+3 more)
onto-agent-server/tests/: __init__.py  test_named_graph.py  test_saga.py  test_saga_integration.py
(+82 files in other folders)
